Vnd 118 backend verkauf transaktion und pfand (#29)
* Introduced first approach of SALE

* Dev (#21)

* Feature/vnd 7 spring mit datenbank verbinden (#1)

* VND-7 Added secret application properties file that is gitignored and importing it via application.properties to establish database connection

* VND-7 establish database connection and create sample objects

* Revert "Feature/vnd 7 spring mit datenbank verbinden (#1)" (#3)

This reverts commit e8d3367837f4a9aee08d4ae79d972f29f1410263.

* Create LICENSE

* feat: Add CORS configuration to fix cross-origin request issues
Allow frontend requests from localhost:3000 to access backend APIs by properly configuring CORS headers and preflight responses.

* feat: Enhance Product and SupplierOrder models with additional fields and methods

- Added shortDescription, longDescription, sku, minStockLevel, maxStockLevel, reorderPoint, reorderQuantity, leadTimeInDays, price, and purchasePrice to Product and ProductDTO.
- Updated ProductFactory to handle new fields in DTO conversion.
- Introduced Supplier reference, purchaseOrderNumber, expectedDeliveryDate, notes, and isAutomaticOrder to SupplierOrder and SupplierOrderDTO.
- Enhanced SupplierOrderFactory for new fields and added repository methods for querying supplier orders by status and supplier ID.

* feat: Integrate ProductTransactionService for enhanced stock management

- Added ProductTransactionService to ProductInventoryControllerV1 for calculating current stock levels.
- Updated product mapping in ProductInventoryControllerV1 to include current stock in ProductDTO.
- Refined isLowOnStock method in ProductStockService to improve stock level checks against minimum stock levels.

* feat: Add inventory status endpoint to ProductInventoryControllerV1

- Implemented a new endpoint to retrieve inventory status, including total product count, low stock products, and out of stock count.
- Integrated ProductRepository to fetch product counts and enhance stock management.
- Util